feat: integrate NextAuth Google provider and route security

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.464.0",
     "next": "14.2.19",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
