--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.464.0",
     "next": "14.2.19",
     "next-auth": "^5.0.0-beta.20",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.7.0",
@@ -29,6 +30,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
