--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest --config jest.config.mjs",
     "test:watch": "jest --watch --config jest.config.mjs",
-    "test:coverage": "jest --coverage --config jest.config.mjs"
+    "test:coverage": "jest --coverage --config jest.config.mjs",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "start-server-and-test 'npm run dev' https://localhost:3000 'cypress run'"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.1",
@@ -46,11 +49,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.16.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.19",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "start-server-and-test": "^2.0.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
