--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "name": "next"
       }
     ],
-    "types": ["node", "jest"],
+    "types": ["node", "jest", "cypress"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
