feat: add dotenv dependency and update testing libraries
- Added dotenv package for environment variable management.
- Updated @testing-library/jest-dom to version 6.6.3 for improved testing capabilities.
- Added @types/dotenv for TypeScript support.
- Refactored chart-container and use-chart-dimensions components to remove unused imports.
- Updated navigation constants to remove unused icons.
- Enhanced type definitions for Pokémon API responses.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.464.0",
     "next": "14.2.19",
     "next-auth": "^5.0.0-beta.20",
@@ -40,10 +41,11 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/d3": "^7.4.3",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.17.9",
     "@types/react": "^18",
